Fix messages margin on mobiles

--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -30,4 +30,7 @@ $bottom-radius: 24px;
     border-radius: 0;
     margin-bottom: 0;
   }
+  .message {
+    margin: -4px 0;
+  }
 }
